# gnome-timer

./: NEWS  README.md  configure.ac  gnome-extimer.doap  org.gnome.ExTimer.json
data/: Makefile.am  org.gnome.ExTimer.appdata.xml.in  org.gnome.ExTimer.desktop.in  org.gnome.ExTimer.service.in  org.gnome.extimer.gschema.xml
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/256x256/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/512x512/: Makefile.am
data/icons/symbolic/: Makefile.am
data/resources/: menus.ui  preferences-keyboard-shortcut-page.ui  preferences-main-page.ui  preferences-plugins-page.ui  preferences.ui  resources.xml  screen-notification.ui  stats-page.ui  stats-view.ui  style.css  window.ui
lib/: Makefile.am  about-dialog.vala  accelerator.vala  aggregated-entry.vala  animation.vala  application.vala  capability-group.vala  capability-manager.vala  capability.vala  desktop-extension.vala  entry.vala  log-scale.vala  notifications-capability.vala  preferences-dialog.vala  presence.vala  screen-notification.vala  service.vala  settings.vala  stats-day-page.vala  stats-month-page.vala  stats-page.vala  stats-view.vala  stats-week-page.vala  timer-action-group.vala  timer-state.vala  timer.vala  utils.vala  window.vala
plugins/actions/: Makefile.am  action-listboxrow.vala  action-page.vala  action.vala  actions.vala  enums.vala  org.gnome.extimer.plugins.actions.gschema.xml  preferences-page.vala
plugins/actions/resources/: action-listboxrow.ui  action-page.ui  preferences-page.ui  resources.xml  style.css
plugins/dark-theme/: Makefile.am  dark-theme-plugin.vala
plugins/gnome/: Makefile.am  gnome-plugin.vala  gnome-shell-extension.vala  org.gnome.extimer.plugins.gnome.gschema.xml
plugins/gnome/extension/: dbus.js  dialogs.js  extension.js  indicator.js  metadata.json.in  notifications.js  presence.js  stylesheet.css  timer.js
plugins/sounds/: Makefile.am  org.gnome.extimer.plugins.sounds.gschema.xml  sound-player.vala  sounds-plugin.vala
plugins/sounds/resources/: preferences-sound-page.ui  resources.xml
po/: POTFILES.in  ca.mo  ca.po  cs.po  de.po  el.po  eo.po  es.po  fa.po  fi.po  fr.po  hu.po  id.po  it.po  kk.po  lt.po  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  tr.po  zh_CN.po
src/: Makefile.am  main.vala
tests/: Makefile.am  test-application.vala  test-capability-group.vala  test-capability-manager.vala  test-capability.vala  test-timer.vala  tests.vala
